destacados en varias pantallas de cliente

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
@@ -195,7 +195,7 @@
         </div>
         <!--ACA VA EL CARRUSEL-->
         <div class="col-md-4">
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div><br />
 </div>
