--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
@@ -122,7 +122,7 @@
         </div>
         <!--ACA VA EL CARRUSEL-->
         <div class="col-md-4">           
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 </div>
