--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -52,7 +52,7 @@
             </div>            
             <!--CARRUSEL-->   
             <div class="col-md-4">
-                
+                @{Html.RenderPartial("Destacados");}
             </div>
         </div>
     </div>
