--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
@@ -72,7 +72,7 @@
         </div>
         <!--LOS EVENTOS DESTACADOS-->
         <div class="col-md-4">
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 </div><!--Fin del container-->
