--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
@@ -43,7 +43,7 @@
 
             <!--CARRUSEL-->
             <div class="col-md-4">
-                destacados
+                @{Html.RenderPartial("Destacados");}
             </div>
         </div>
     </div>
