--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
@@ -57,9 +57,8 @@
         </div>
 
         <!--CARRUSEL-->
-        <div class="col-md-4">
-            destacados
-            @*{Html.RenderPartial("Destacados");}*@
+        <div class="col-md-4">            
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 </div>
