--- a/WebApplication4/WebApplication4/Views/Error/General.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/General.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "General";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
+    <h2>General Error</h2>
+</div>
 
-<h2>General Error</h2>
 
