--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -156,7 +156,7 @@
         </div>
         <!--CARRUSEL-->
         <div class="col-md-4">
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 </div><!--Fin del container-->
