--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -100,7 +100,7 @@
         </div>
         <!--CARRUSEL-->
         <div class="col-md-4">
-
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 }
