--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
@@ -149,7 +149,7 @@
             </div><br/>
         </div>
         <div class="col-md-4">
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
     <br />    
