--- a/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
@@ -12,10 +12,10 @@
         </ol>
     </div>
 </div>
+
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="container">
         <div class="contenedor col-md-8">
@@ -47,6 +47,9 @@
                     <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger"><span class="glyphicon glyphicon-backward"></span> Regresar</a>
                 </center>
             </div>
+        </div>
+        <div class="col-md-4">
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
 
