--- a/WebApplication4/WebApplication4/Views/Ventas/Detalles.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Detalles.cshtml
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            destacados
+            @{Html.RenderPartial("Destacados");}
         </div>        
     </div>
 
