desacados en todas las pantallas

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
@@ -38,7 +38,7 @@
             {
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Carrito Vacio.</p>
+                        <h4>No ha agregado nada a su carrito.</h4>
                     </div>
                 </div>
             }
