--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/VerRegalos.cshtml
@@ -49,9 +49,9 @@
                     </table>
                 </div>
             </div>
-            <center>
-                <h5>Los regalos solo podrán ser reclamados en los puntos de venta y de acuerdo a stock.</h5>
-                <h6>Puedes ver los puntos de venta <a href="@Url.Action("PuntoVentas", "Home")">aquí</a></h6>
+            <center style="color: white; font-weight: bold; text-shadow: 2px 2px blue;">
+                <h4>Los regalos solo podrán ser reclamados en los puntos de venta y de acuerdo a stock.</h4>
+                <h5>Puedes ver los puntos de venta <a href="@Url.Action("PuntoVentas", "Home")">aquí</a></h5>
             </center>
             
         </div>
