--- a/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
@@ -80,7 +80,7 @@
     </div>
     <!--CARRUSEL-->
     <div class="col-md-4">
-
+        @{Html.RenderPartial("Destacados");}
     </div>
 </div>
 <script>
