--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -296,13 +296,17 @@
                                                     {
                                                         if (tu == null)
                                                         {
-                                                            <h6>Debes tener un Turno</h6>
+                                                            <center>
+                                                                <h5>Debe tener un turno para poder vender</h5>
+                                                            </center> 
                                                         }
                                                         else
                                                         {
                                                             if (tu.estadoCaja != "Abierto")
                                                             {
-                                                                <h6>Caja debe estar Abierta</h6>
+                                                                <center>
+                                                                    <h5>La caja no ha sido abierta aún</h5>
+                                                                </center>
                                                             }
                                                         }
                                                     }
